--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="./bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="./font-awesome.min.css" media="screen">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
     <script src="./jquery-3.1.1.js"type="text/javascript"></script>
@@ -21,6 +22,12 @@
       <img src="./me.jpg" alt="A photo of me" class="img-circle"/>
     </center>
 
+    <div class="icons">
+      <center>
+        <a href="https://github.com/codybru10"><i class="fa fa-github fa-3x" aria-hidden="true" style="color:white"></i></a>
+        <a href="https://www.linkedin.com/in/cody-brubaker/" ><i class="fa fa-linkedin fa-3x" aria-hidden="true" style="color:white"></i></a>
+      </center>
+    </div>
     <hr>
   </body>
 </html>
