add project picture

--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
       </center>
     </div>
     <hr>
+
+    <img class="project_shots" src="./bank_notes.png" alt="Picture of Bank Notes Project" />
+
+    <br>
   </body>
 </html>
