--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <script src="./scripts.js"type="text/javascript"></script>
     <title>Cody</title>
   </head>
-  <body data-spy="scroll">
+  <body>
 
-    <nav>
-      <ul class="nav nav-tabs">
-        <li><a href="#title">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+      <nav class="navbar navbar-inverse navbar-fixed-top" data-spy="scroll">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav">
+            <li class="navbar-link"><a href="#title">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        <div>
+      </nav>
 
     <h1 id="title"><center>Cody Brubaker</center></h1>
 
